@@ -16,6 +16,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -91,8 +92,8 @@ public class AiModelService {
         HttpEntity<Void> entity = new HttpEntity<>(headers);
         KeywordOutput keywordOutputs = GetKeyword(query);
         String keyword = keywordOutputs.keyword();
-        if(keyword.isEmpty()) ConfirmedQuery=query;
-        else ConfirmedQuery=keyword;
+        if (keyword.isEmpty()) ConfirmedQuery = query;
+        else ConfirmedQuery = keyword;
         ResponseEntity<HuggingFaceModel[]> response = restTemplate.exchange(
                 SEARCH_URL,
                 HttpMethod.GET,
@@ -117,61 +118,22 @@ public class AiModelService {
                 .entity(KeywordOutput.class);
     }
 
-    public void downloadModel(String modelId, String saveDir) throws IOException {
-        Path dirPath = Path.of(saveDir);
-        if (!Files.exists(dirPath)) {
-            Files.createDirectories(dirPath);
-        }
 
-        downloadFolderRecursive(modelId, "", dirPath); // start from root folder
-    }
-
-    private void downloadFolderRecursive(String modelId, String folderPath, Path saveDir) throws IOException {
-        String apiUrl = "https://huggingface.co/api/models/" + modelId + "/tree/main" +
-                (folderPath.isEmpty() ? "" : "/" + folderPath);
+    public String TextToTextrunModel(String modelId, String inputText) {
+        String url = "https://api-inference.huggingface.co/models/" + modelId;
 
         HttpHeaders headers = new HttpHeaders();
         headers.setBearerAuth(huggingFaceApiToken);
-        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
-        HttpEntity<Void> entity = new HttpEntity<>(headers);
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
 
-        ResponseEntity<List> response = restTemplate.exchange(
-                apiUrl,
-                HttpMethod.GET,
-                entity,
-                List.class
-        );
+        String requestBody = "{\"inputs\": \"" + inputText + "\"}";
+        HttpEntity<String> entity = new HttpEntity<>(requestBody, headers);
 
-        if (response.getStatusCode() != HttpStatus.OK || response.getBody() == null) {
-            throw new IOException("Failed to fetch file list from Hugging Face API for model: " + modelId +
-                    (folderPath.isEmpty() ? "" : " folder: " + folderPath));
-        }
-
-        for (Object fileObj : response.getBody()) {
-            @SuppressWarnings("unchecked")
-            Map<String, Object> fileMap = (Map<String, Object>) fileObj;
-            String path = fileMap.get("path").toString();
-            String type = fileMap.get("type").toString();
-
-            if ("directory".equals(type)) {
-                System.out.println("Entering folder: " + path);
-                downloadFolderRecursive(modelId, path, saveDir); // recursion
-            } else {
-                String fileUrl = "https://huggingface.co/" + modelId + "/resolve/main/" + path;
-                Path targetPath = saveDir.resolve(path);
-
-                Files.createDirectories(targetPath.getParent());
-
-                try (InputStream in = new URL(fileUrl).openStream()) {
-                    Files.copy(in, targetPath, StandardCopyOption.REPLACE_EXISTING);
-                    System.out.println("Downloaded: " + path);
-                } catch (IOException e) {
-                    System.err.println("Failed to download " + path + ": " + e.getMessage());
-                }
-            }
-        }
+        ResponseEntity<String> response = restTemplate.exchange(url, HttpMethod.POST, entity, String.class);
+        return response.getBody();
     }
-
-
-
 }
+
+
+
